[package]
name = "pzec"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Parity bitcoin client."

[dependencies]
app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
chain = { path = "chain" }
clap = { version = "2", features = ["yaml"] }
db = { path = "db" }
env_logger = "0.5"
import = { path = "import" }
keys = { path = "keys" }
libc = "0.2"
log = "0.4"
logs = { path = "logs" }
message = { path = "message" }
network = { path = "network" }
miner = { path = "miner" }
p2p = { path = "p2p" }
primitives = { path = "primitives" }
rpc = { path = "rpc" }
script = { path = "script" }
storage = { path = "storage" }
sync = { path = "sync" }
verification = { path = "verification" }

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true

[[bin]]
path = "pzec/main.rs"
name = "pzec"

[workspace]
members = [
    "bencher",
    "chain",
	"db",
	"import",
	"keys",
	"logs",
	"message",
	"miner",
	"network",
	"p2p",
	"primitives",
	"rpc",
	"script",
	"serialization",
	"serialization_derive",
	"storage",
	"sync",
	"test-data",
	"verification",
]

[patch.crates-io]
heapsize = { git = "https://github.com/cheme/heapsize.git", branch = "ec-macfix" }
