[package]
name = "db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parity-rocksdb = { git = "https://github.com/paritytech/rust-rocksdb" }
elastic-array = "0.10"
parking_lot = "0.8"
log = "0.4"
bit-vec = "0.4"
lru-cache = "0.1"
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
chain = { path = "../chain" }
storage = { path = "../storage" }

[dev-dependencies]
tempdir = "0.3"
test-data = { path = "../test-data" }
