[package]
name = "verification"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
time = "0.1"
log = "0.4"
rayon = "1.0"
parking_lot = "0.4"
bellman = "0.1"
byteorder = "1.2"
lazy_static = "1.2.0"
pairing = "0.14.2"
sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto.git", rev = "21084bde2019c04bd34208e63c3560fe2c02fb0e" }
primitives = { path = "../primitives" }
chain = { path = "../chain" }
serialization = { path = "../serialization" }
script = { path = "../script" }
network = { path = "../network" }
storage = { path = "../storage" }
bitcrypto = { path = "../crypto" }
rustc-hex = "2"

[dev-dependencies]
rand = "0.4"
test-data = { path = "../test-data" }
db = { path = "../db" }
